--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Edit.cshtml
@@ -28,6 +28,10 @@
                     <td>@Html.LabelFor(m => m.ExternalId)</td>
                     <td>@Html.EditorFor(m => m.ExternalId)</td>
                 </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.CreativeURLFormat)</td>
+                    <td>@Html.EditorFor(m => m.CreativeURLFormat)</td>
+                </tr>
             </table>
             <br />
             <input type="submit" value="Save" />
