--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Creative.cshtml
@@ -121,23 +121,26 @@
     #}#
 </script>
 <script id="tmplCreativeHover" type="text/x-kendo-template">
-    # if (target.data('adbody') != null) { #
+    # if ((target.data('adheadline') != null) || (target.data('admessage') != null)) { #
     <div id="divHover" class="popover">
 	    <div class="popover-content">
-
-		    <figure class="ad thumb_600x315 fb-newsfeed-preview fb-rhc-preview">
+		    <figure class="ad thumb_#= target.data('adwidth') #x#= target.data('adheight') # fb-newsfeed-preview fb-rhc-preview">
 			    <header class="fb-mobile-page-header">
 				    <span class="fb-nf-sponsored fb-mobile-secondary fb-mobile-small">Sponsored</span>
 			    </header>
 			    <section class="fb-nf-ad-preview">
 				    <section class="nf-thumbnail">
-					    <img src="https://s.adroll.com/a/XC7/NN2/XC7NN2SJLZHDVFYTRI2LUP.jpg?v=2016-02-05 20:58:28.713055" alt="0205 WalkerCo Bevel Vday2016 FB 600x315 3">
+					    <img src="#= target.data('url') #">
 					    <div class="fb-nf-border-bottom"></div>
 				    </section>
 				    <section class="fb-preview-fields">
-					    <h5 class="fb-rhc-headline fb-mobile-nowrap">Great V-Day Gift For Men</h5>
+					#if (target.data('adheadline') != null) { #
+                        <h5 class="fb-rhc-headline fb-mobile-nowrap">#= target.data('adheadline') #</h5>
+                    # } #
 					    <span class="fb-mobile-secondary fb-rhc-url fb-mobile-nowrap">a2.adform.net</span>
-					    <span class="fb-rhc-message">Bevel Shave System Helps Prevent Razor Bumps</span>
+					#if (target.data('admessage') != null) { #
+					    <span class="fb-rhc-message">#= target.data('admessage') #</span>
+                    # } #
 				    </section>
 				    <div class="clear"></div>
 			    </section>
