--- a/3/ClientPortal.Web/ClientPortal.Web/Content/AdRoll/multi_product_da.css
+++ b/3/ClientPortal.Web/ClientPortal.Web/Content/AdRoll/multi_product_da.css
@@ -23,6 +23,12 @@
     border: 1px solid #c1c4c9;
 }
 
+/* Line 2037 */
+.fb-nf-ad-preview p.fb-body {
+    color: #8c8c8c;
+}
+
+
 /* line 3883 */
 .popover-content .fb-rhc-preview.specific-placements {
     margin-bottom: 30px;
