--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Shared/_LayoutTD.cshtml
@@ -67,7 +67,7 @@ table th,td {
                 <ul class="dropdown-menu">
                     <li><a href="@Url.Action("ReportViewer", "Reports")">Report Viewer</a></li>
                     <li><a href="@Url.Action("ExtAccount", "Stats")">Raw Stats - all</a></li>
-                    <li><a href="@Url.Action("IndexGauge", "ExtAccounts")">Stats Gauge - all</a></li>
+                    <li><a href="@Url.Action("IndexGaugeSummary", "ExtAccounts")">Stats Gauge</a></li>
                 </ul>
             </li>
             <li class="dropdown">
